feat: config and mapper for construct CRUD